--- a/CSA/AndroidDevelopment/HelloWorldAndroid2/app/src/main/res/layout/activity_main.xml
+++ b/CSA/AndroidDevelopment/HelloWorldAndroid2/app/src/main/res/layout/activity_main.xml
@@ -5,21 +5,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity"
+    android:gravity="center_horizontal">
 
     <TextView
         android:id="@+id/questionTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Hello World" />
+        android:textColor="@android:color/holo_red_dark"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:text="What is your name" />
 
     <EditText
         android:id="@+id/nameEditView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:ems="116"
+        android:hint="Your Name"/>
     <Button
         android:id="@+id/helloButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="Press Enter"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:onClick="sayHello"/>
+
+    <TextView
+        android:id = "@+id/helloText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:textSize="20sp"
+        android:text=""/>
 </LinearLayout>
