Finsished KK App, not really

--- a/CSA/AndroidDevelopment/KrustyKrabsApp/app/src/main/res/layout/activity_second.xml
+++ b/CSA/AndroidDevelopment/KrustyKrabsApp/app/src/main/res/layout/activity_second.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/Krusty_krab_gallery_grub"
+        android:src="@drawable/krusty_krab_gallery_grub"
         android:contentDescription="TODO" />
 
     <LinearLayout
@@ -23,51 +23,84 @@
         <NumberPicker
             android:id="@+id/menuItems"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="250px"/>
+
+        <Button
+            android:id="@+id/optionsForItem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Get Options for Seleected Item"
+            android:onClick="getOptions"/>
 
         <Button
             android:id="@+id/addItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:text="Add Selected Item" />
+            android:text="@string/add_selected_item"
+            android:onClick="addItem"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:baselineAligned="false"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0"
                 android:orientation="vertical"
-                android:layout_weight="0">
+                android:visibility="gone"
+                android:id="@+id/sandwichOptionsLayout">
 
                 <CheckBox
                     android:id="@+id/cheese"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Add Cheese?" />
+                    android:text="@string/add_cheese" />
 
                 <CheckBox
                     android:id="@+id/meal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Make It a Combo" />
+                    android:text="@string/make_it_a_combo" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:orientation="vertical"
-                android:layout_weight="1">
+                android:id="@+id/sizeOptionLayout"
+                android:visibility="gone">
 
                 <RadioGroup
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent">
+
+                    <RadioButton
+                        android:id="@+id/smallButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Small Size" />
+
+                    <RadioButton
+                        android:id="@+id/mediumButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Medium Size" />
+
+                    <RadioButton
+                        android:id="@+id/largeButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Large Button" />
+                </RadioGroup>
             </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
+
 </LinearLayout>
 
