--- a/CSA/AndroidDevelopment/KrustyKrabsApp/app/src/main/res/layout/activity_main.xml
+++ b/CSA/AndroidDevelopment/KrustyKrabsApp/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
-            app:srcCompat="@drawable/krustKrab"
+            app:srcCompat="@drawable/krustykrab"
             android:layout_weight="1"/>
 
         <Button
