--- a/CSA/AndroidDevelopment/KrustyKrabV2/app/src/main/res/layout/activity_order.xml
+++ b/CSA/AndroidDevelopment/KrustyKrabV2/app/src/main/res/layout/activity_order.xml
@@ -28,6 +28,26 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/addItem"
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="100"
+                android:text="Add Item" />
+
+            <Button
+                android:id="@+id/checkout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Check Out" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:baselineAligned="false"
             android:orientation="horizontal">
 
@@ -85,14 +105,6 @@
                 </RadioGroup>
             </LinearLayout>
         </LinearLayout>
-
-        <Button
-            android:id="@+id/addItem"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:onClick="addItem"
-            android:text="Add Item" />
 
     </LinearLayout>
 
