--- a/CSA/TripTracker/311_Login/app/src/main/res/layout/activity_login.xml
+++ b/CSA/TripTracker/311_Login/app/src/main/res/layout/activity_login.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
+        android:text="test@email.com"
         android:hint="@string/please_enter_your_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -20,8 +21,10 @@
     <EditText
         android:id="@+id/enterPassword"
         android:hint="@string/please_enter_your_password"
+        android:text="Momanddad-1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/enterEmail" />
@@ -69,6 +72,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/switchViewText"
         android:visibility="gone"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
